[gd_scene load_steps=10 format=3 uid="uid://cjnv6ho56g5rj"]

[ext_resource type="Script" uid="uid://dgjnxqbqnilwy" path="res://HUD/PlayerHud.gd" id="1_odnkp"]
[ext_resource type="Texture2D" uid="uid://hh5ligvena3u" path="res://addons/MajikayoGames_weapons_asset_pack/crosshair/crosshair-dot.svg" id="2_kr0of"]
[ext_resource type="Texture2D" uid="uid://c6h7pj1mok5w4" path="res://addons/MajikayoGames_weapons_asset_pack/crosshair/crosshair-left-outline.svg" id="3_jqxyh"]
[ext_resource type="Texture2D" uid="uid://b6bmoqeagspis" path="res://addons/MajikayoGames_weapons_asset_pack/crosshair/crosshair-left-side.svg" id="4_8wjw8"]
[ext_resource type="Shader" uid="uid://dj3vb435c3hci" path="res://HUD/filled_percent.gdshader" id="4_kr0of"]
[ext_resource type="Texture2D" uid="uid://co7txa7fwows2" path="res://addons/MajikayoGames_weapons_asset_pack/crosshair/crosshair-right-outline.svg" id="5_5fg6y"]
[ext_resource type="Texture2D" uid="uid://bvfclj77eixcq" path="res://addons/MajikayoGames_weapons_asset_pack/crosshair/crosshair-right-side.svg" id="6_ck0bh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jqxyh"]
shader = ExtResource("4_kr0of")
shader_parameter/filled_percent = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kr0of"]
shader = ExtResource("4_kr0of")
shader_parameter/filled_percent = 1.0

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_odnkp")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CrossHair" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("2_kr0of")

[node name="HealthBG" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("3_jqxyh")

[node name="HealthBar" type="TextureRect" parent="CenterContainer/HealthBG"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_jqxyh")
layout_mode = 0
texture = ExtResource("4_8wjw8")

[node name="AmmoBG" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("5_5fg6y")

[node name="AmmoBar" type="TextureRect" parent="CenterContainer/AmmoBG"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_kr0of")
layout_mode = 0
texture = ExtResource("6_ck0bh")
